<resources>
    <!--    <string name="app_name">LifeSaved</string>-->
    <string name="app_name">FlashAlert</string>
    <string name="email_hint">Email:</string>
    <string name="old_email_hint">Old Email:</string>
    <string name="new_email_hint">New Email:</string>
    <string name="pass_hint">Password:</string>
    <string name="old_pass_hint">Old password:</string>
    <string name="new_pass_hint">New password:</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="hint_subject">Subject:</string>
    <string name="confirm">Confirm</string>
    <string name="add_image">+</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="add_folder">Add Folder</string>
    <string name="images">Images</string>
    <string name="settings">Settings</string>
    <string name="logout">logout</string>
    <string name="enable_push_notifications">Enable push notifications</string>
    <string name="disable_push_notifications">Disable push notifications</string>
    <string name="select_notifs">How often would you like to receive notifications?</string>
    <string name="change_email">Change your email</string>
    <string name="create_video">Create video</string>
    <string name="notifications">Notifications</string>
    <string name="apply">Apply</string>
    <string name="reset_password">Reset password</string>
    <string name="change_password">Change password</string>
    <string name="contact_us">Contact us</string>
    <string name="or">OR</string>
    <string name="generate_code">Generate Code</string>
    <string name="already_have_code">Already have a code?</string>
    <string name="input_code">Enter code:</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>